--- a/ASPDOTNETWebCore.csproj
+++ b/ASPDOTNETWebCore.csproj
@@ -7,4 +7,8 @@
     <UserSecretsId>e44d7e64-a84f-4e83-8c77-d58071fa5eed</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenQA.Selenium.Chrome.ChromeDriverExtensions" Version="1.2.0" />
+  </ItemGroup>
+
 </Project>
